--- a/deployment/k8s/deployment.yaml
+++ b/deployment/k8s/deployment.yaml
@@ -16,6 +16,11 @@ spec:
     spec:
       containers:
         - name: nextjs-app
-          image: <IMAGE_TAG>  # This gets replaced by Jenkins during deployment
+          image: <IMAGE_TAG> # Replace during CI/CD pipeline
           ports:
             - containerPort: 3001
+          env:
+            - name: NODE_ENV
+              value: "production"
+
+
