--- a/deployment/k8s/deployment.yaml
+++ b/deployment/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: nextjs-app
-          image: <IMAGE_TAG> # Replace during CI/CD pipeline
+          image: <IMAGE_TAG>
           ports:
             - containerPort: 3001
           env:
