--- a/deployment/k8s/deployment.yaml
+++ b/deployment/k8s/deployment.yaml
@@ -16,6 +16,11 @@ spec:
     spec:
       containers:
         - name: nextjs-app
-          image: <IMAGE_TAG>
+          image: <IMAGE_TAG> # Replace <IMAGE_TAG> with your image name (e.g., myrepo/nextjs-app:latest)
           ports:
             - containerPort: 3001
+          env:
+            - name: NEXT_DISABLE_ESLINT
+              value: "true" # Disables ESLint during build
+            - name: BUILD_NUMBER
+              value: "1" # Example environment variable
