--- a/deployment/k8s/service.yaml
+++ b/deployment/k8s/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nextjs-app-service
+  labels:
+    app: nextjs-app
 spec:
   selector:
     app: nextjs-app
@@ -9,5 +11,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3001
-      nodePort: 30081
   type: NodePort
