--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "extends": [
       "next/core-web-vitals",
       "prettier"
+    ],
+    "ignorePatterns": [
+      "deployment/**/*.yaml",
+      "deployment/**/*.yml"
     ]
   }
 }
