--- a/deployment/k8s/deployment.yaml
+++ b/deployment/k8s/deployment.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nextjs-app
+  name: nextjs-app-deployment
   labels:
     app: nextjs-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nextjs-app
@@ -16,10 +16,6 @@ spec:
     spec:
       containers:
         - name: nextjs-app
-          image: <IMAGE_TAG>
-            - containerPort: 3001
-          env:
-            - name: NEXT_DISABLE_ESLINT
-              value: "true"
-            - name: BUILD_NUMBER
-              value: "1"
+          image: https://hub.docker.com/repository/docker/prasadmpotdar/nextjs-app
+          ports:
+            - containerPort: 3001  # Update container port to 3001
