--- a/deployment/k8s/service.yaml
+++ b/deployment/k8s/service.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nextjs-app-service
-  labels:
-    app: nextjs-app
 spec:
   selector:
     app: nextjs-app
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3001
-  type: NodePort
+      targetPort: 3001  # Update target port to 3001
+  type: LoadBalancer
