--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
         DOCKER_REGISTRY = 'https://hub.docker.com/r/prasadmpotdar'
         K8S_NAMESPACE = 'default'
         K8S_DEPLOYMENT_NAME = 'nextjs-app-deployment'
+        FULL_IMAGE_NAME = "${DOCKER_REGISTRY}/${DOCKER_IMAGE}"
     }
     stages {
         stage('Checkout') {
@@ -16,7 +17,7 @@ pipeline {
             steps {
                 script {
                     // Build Docker image
-                    sh "docker build -t $DOCKER_IMAGE ."
+                     sh "docker build -t ${FULL_IMAGE_NAME}:${env.BUILD_NUMBER} ."
                 }
             }
         }
@@ -24,12 +25,20 @@ pipeline {
             steps {
                 script {
                     // Log into Docker registry
-                    withCredentials([usernamePassword(credentialsId: 'docker-creds', passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]) {
-                        sh "docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD $DOCKER_REGISTRY"
+                    withCredentials([string(credentialsId: 'docker-hub-access-token', variable: 'DOCKER_ACCESS_TOKEN')]) {
+                        // Login to Docker Hub
+                        sh """
+                        echo $DOCKER_ACCESS_TOKEN | docker login -u $REGISTRY_HOST --password-stdin
+                        """
+
+                        // Build and push Docker image
+                        sh """
+                        docker build -t ${FULL_IMAGE_NAME}:${env.BUILD_NUMBER} -f deployment/Dockerfile .
+                        docker tag ${FULL_IMAGE_NAME}:${env.BUILD_NUMBER} ${FULL_IMAGE_NAME}:latest
+                        docker push ${FULL_IMAGE_NAME}:${env.BUILD_NUMBER}
+                        docker push ${FULL_IMAGE_NAME}:latest
+                        """
                     }
-                    // Push Docker image to registry
-                    sh "docker tag $DOCKER_IMAGE $DOCKER_REGISTRY/$DOCKER_IMAGE"
-                    sh "docker push $DOCKER_REGISTRY/$DOCKER_IMAGE"
                 }
             }
         }
